# ChangeLog file for MonetDB5
# This file is updated with Maddlog
