@@ -197,6 +197,12 @@ minimal_pipe=inline,remap,deadcode,multiplex,garbageCollector
 # locality
 default_pipe=inline,remap,evaluate,costModel,coercions,emptySet,aliases,mitosis,mergetable,deadcode,commonTerms,joinPath,reorder,deadcode,reduce,dataflow,history,multiplex,garbageCollector
 
+# The no_mitosis pipe line is (and should be kept!) identical to the default
+# pipeline, except that optimizer mitosis is omitted.  It is use mainly to
+# make some tests work deterministically, and to check / debug whether
+# "unexpected" problems are related to mitosis (and/or mergetable).
+no_mitosis_pipe=inline,remap,evaluate,costModel,coercions,emptySet,aliases,mergetable,deadcode,commonTerms,joinPath,reorder,deadcode,reduce,dataflow,history,multiplex,garbageCollector
+
 # The default pipeline used in the November 2009 release
 nov2009_pipe=inline,remap,evaluate,costModel,coercions,emptySet,aliases,mergetable,deadcode,constants,commonTerms,joinPath,deadcode,reduce,dataflow,history,multiplex,garbageCollector
 
